--- a/src/components/NewOnboarding/NewOnBoarding.Component.css
+++ b/src/components/NewOnboarding/NewOnBoarding.Component.css
@@ -1,4 +1,3 @@
-
 .ac__main__div {
     width: 100%;
     /* height: 100vh; */
@@ -142,7 +141,9 @@
     width: 100%;
 }
 
-.ac__next__btn {
+
+
+.no__next__btn {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -171,10 +172,9 @@
     order: 0;
     flex-grow: 0;
     margin: 0px 0px;
-    width: 180px !important;
 }
 
-.ac__back__btn {
+.no__back__btn {
     flex-direction: row;
     justify-content: center;
     align-items: center;
@@ -200,18 +200,17 @@
     flex: none;
     order: 0;
     flex-grow: 0;
-    width: 120px !important;
+    
 }
 
-.ac__left__action {
+.no__left__action {
     width: 50% !important;
 }
 
-.ac__right__action {
+.no__right__action {
      text-align: end !important;
      width: 100% !important;
     /* display: flex !important; */
     /* position: absolute;
     right: 20px !important; */
 }
-
